# resonline

./: Dockerfile  Makefile  Readme.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml
.github/workflows/: check.yml
app/: chemas.py  config.py  db_conn.py  main.py  utils.py
docker/env/: .env
docker/nginx/: fastapi.conf
